[Payment Request] Calling PaymentRequest's show() should consume user activation https://bugs.webkit.org/show_bug.cgi?id=217365

Patch by Marcos Caceres <marcos@marcosc.com> on 2021-08-31
Reviewed by Youenn Fablet and Devin Rousso.

LayoutTests/imported/w3c:

Re-import payment-request tests from WPT c0453ea15be63fc697bdbc141aa6837a1020b114.

* web-platform-tests/payment-request/payment-is-showing.https.html:
* web-platform-tests/payment-request/payment-request-canmakepayment-method.https-expected.txt:
* web-platform-tests/payment-request/payment-request-hasenrolledinstrument-method.tentative.https-expected.txt:
* web-platform-tests/payment-request/payment-request-show-method.https-expected.txt: Added.
* web-platform-tests/payment-request/payment-request-show-method.https.html:
* web-platform-tests/payment-request/rejects_if_not_active.https.html:
* web-platform-tests/payment-request/show-method-optional-promise-rejects.https-expected.txt:

Source/WebCore:

Tested by existing WPT tests.

* Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::PaymentRequest::show):

LayoutTests:

* http/tests/paymentrequest/payment-is-showing.https.html:
* http/tests/paymentrequest/payment-request-show-method.https.html:
* platform/ios-wk2/imported/w3c/web-platform-tests/payment-request/show-method-optional-promise-rejects.https-expected.txt: Removed.

Canonical link: https://commits.webkit.org/241163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281830 268f45cc-cd09-0410-ab3c-d52691b4dbfc